samples/_failures_safe/1761144616_f542f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a06edfa.c: In function ‘update_stats’:
./samples/SAFE/__tmp_0a06edfa.c:144:63: error: missing terminating ' character
  144 |         analyzer->stats.most_frequent_ip[MAX_IP_LENGTH - 1] = '\0
      |                                                               ^~~
./samples/SAFE/__tmp_0a06edfa.c:144:9: error: expected expression at end of input
  144 |         analyzer->stats.most_frequent_ip[MAX_IP_LENGTH - 1] = '\0
      |         ^~~~~~~~
./samples/SAFE/__tmp_0a06edfa.c:144:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a06edfa.c:144:9: error: expected declaration or statement at end of input
